--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1> Autumn's Daily Rituals </h1>
     <p> Recording Starting Now...</p>
     <hr>
-    <a href="file:///Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry1/entry1.html">ENTRY 1</a>
+    <a href="entries/entry1/entry1.html">ENTRY 1</a>
     <a href="">ENTRY 2</a>
     <a href="">ENTRY 3</a>
     <a href="">ENTRY 3</a>
