--- a/entries/entry1/entry1.html
+++ b/entries/entry1/entry1.html
@@ -3,41 +3,38 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry1/assets/entry1.css">
   <title>ENTRY 1</title>
 </head>
 
 <body>
-
-  <div style="border: 1px solid black; background-color: rgb(191, 191, 191);">
-  <h1 style="text-align: center;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size:300%;">SOCIAL HOUR</h1></div>
-  
-  <br>
-
-    <div style="text-align: center; background-color: rgb(239, 36, 36); border: 1px solid black">
-        <img src="IMG_566.png" alt="NEXT" width="50" height="50" style="display: inline-block; vertical-align: middle;">
-        <span style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 40px; font-weight: bold; margin: 0 80px; display: inline-block; vertical-align: middle;">
-            ENTRY 1
-        </span>
-        <img src="IMG_565.png" alt="NEXT 2" width="50" height="50" style="display: inline-block; vertical-align: middle;"></div>
+  <div style="border: 1px solid black; background-color:rgb(191, 191, 191);">
+    <h1 style="text-align: center;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 60px; font-weight: bold;">SOCIAL HOUR</h1></div>
 
   <br>
+
+  <div style="border: 1px solid black; background-color: rgb(0, 0, 0);">
+    <h2 style="text-align: center;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 40px;margin: 10px 20px;">
+     <img class="c" src="assets/IMG_566 copy 3.png" width="40" height="40"> ENTRY 1 <img class="c" src="assets/IMG_565 copy 3.png" width="40" height="40"></h2>></div>
 <br>
 
-  <img src="IMG_1.jpg" alt="3 Friends Night Out Image 1" width="350" height="450"> 
-  <img src="IMG_2.jpg"  alt="Boyfriend and Girlfriend Holding Hand Image" width="590" height="450">
-  <img src="IMG_3.jpg" alt="3 Friends Night Out Image 2" width="350" height="450">
+  <img src="assets/IMG_1.jpg" alt="3 Friends Night Out Image 1" width="350" height="450"> 
+  <img src="assets/IMG_2.jpg"  alt="Boyfriend and Girlfriend Holding Hand Image" width="590" height="450">
+  <img src="assets/IMG_3.jpg" alt="3 Friends Night Out Image 2" width="350" height="450">
 
   <br> 
 
-  <img src="IMG_4.jpg" alt= "Group of Freinds Dressed Up Image" width="350" height="450">
-  <img src="IMG_5.jpg" alt="Boyfriend and Girlfriend Dorm Image" width="590" height="450">
-  <img src="IMG_6.jpg" alt="Best Friend Image" width="350" height="450">
+  <img src="assets/IMG_4.jpg" alt= "Group of Freinds Dressed Up Image" width="350" height="450">
+  <img src="assets/IMG_5.jpg" alt="Boyfriend and Girlfriend Dorm Image" width="590" height="450">
+  <img src="assets/IMG_6.jpg" alt="Best Friend Image" width="350" height="450">
 
-  <p style="font-size:xx-large; text-align: center; font-style: italic;">
-    My daily ritual of hanging out with friends offers comfort and structure. It's more than just a social hour—it helps me feel connected and grounded. This time with friends shapes my day by bringing positive energy and a sense of belonging.</p>
+  <br> 
 
-  <!--This is a comment. Comments are not displayed in the browser-->
+    <div style="border: 1px solid black; background-color: rgb(255, 255, 255);">
+      <p style="text-align: center; font-style: italic;">
+        My daily ritual of hanging out with friends offers comfort and structure. It's more than just a social hour—it helps me feel connected and grounded. This time with friends shapes my day by bringing positive energy and a sense of belonging.</p></div>
+
 
 </body>
 </html>
