--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p> Recording Starting Now...</p>
     <hr>
     <a href="entries/entry1/entry1.html">ENTRY 1</a>
-    <a href="">ENTRY 2</a>
+    <a href="entries/entry2/entry2.html">ENTRY 2</a>
     <a href="">ENTRY 3</a>
     <a href="">ENTRY 3</a>
     <a href="">ENTRY 4</a>
