Week 5 HW - Entries 1-3
Entries 1-3

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <hr>
     <a href="entries/entry1/entry1.html">ENTRY 1</a>
     <a href="entries/entry2/entry2.html">ENTRY 2</a>
-    <a href="">ENTRY 3</a>
+    <a href="entries/entry3/entry3.html">ENTRY 3</a>
     <a href="">ENTRY 3</a>
     <a href="">ENTRY 4</a>
     <a href="">ENTRY 5</a>
