--- a/entries/entry2/entry2.html
+++ b/entries/entry2/entry2.html
@@ -2,35 +2,46 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry2/assets/entry2.css">
   <title>ENTRY 2</title>
 </head>
 
 <body>
-    <div style="border: 1px solid black; background-color:rgb(191, 191, 191);">
-        <h1 style="text-align: center;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 60px; font-weight: bold;">GETTING READY</h1></div>
-        
-  <br>
+  <div style="background-color: rgb(255, 210, 213)">
+    <div class="zoom-in-out-box">GETTING READY</div>
+  
+    <br>
+  
+    <div style="background-color:rgb(151, 97, 100);">
+      <h2 style="text-align: center;">
+      <img class="c" src="assets/IMG_566 copy 2.png" width="40" height="50"> ENTRY 2 <img class="c" src="assets/IMG_565 copy 2.png" width="40" height="40"></h2></div>
+     <br>
 
-  <div style="border: 1px solid black; background-color: rgb(0, 0, 0);">
-        <h2 style="text-align: center;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 40px;margin: 10px 20px;">
-         <img class="c" src="assets/IMG_566 copy 2.png" width="40" height="40"> ENTRY 2 <img class="c" src="assets/IMG_565 copy 2.png" width="40" height="40"></h2>></div>
-        
-  <br>
-  <img src="assets/IMG_1525.jpeg" alt="Makeup" width="350" height="450"> 
-  <img src="assets/IMG_5036.jpeg" alt="Girl Straightening Her Hair" width="590" height="450">
-  <img src="assets/IMG_1521.JPG" alt="Blending Out Makeup" width="350" height="450">
-  <br>
-  <img src="assets/IMG_5035.jpeg" alt="Putting on Lipgloss" width="350" height="450">
-  <img src="assets/IMG_5034.jpeg" alt="Putting on Blush in Mirror" width="590" height="450">
-  <img src="assets/IMG_5033.jpeg" alt="Spraying Perfume" width="350" height="450">
+  <body>
+    <div class="image-container">
+      <div class="row">
+        <img src="assets/IMG_1525.jpeg" alt="Makeup">
+        <img class="large" src="assets/IMG_5036.jpeg" alt="Girl Straightening Her Hair">
+        <img src="assets/IMG_1521.JPG" alt="Blending Out Makeup">
+      </div>
+      <div class="row">
+        <img src="assets/IMG_5035.jpeg" alt="Putting on Lipgloss"> 
+        <img class="large" src="assets/IMG_5034.jpeg" alt="Putting on Blush in Mirror">
+        <img src="assets/IMG_5033.jpeg" alt="Spraying Perfume"> 
+      </div>
 
-  <div style="border: 1px solid black; background-color: rgb(255, 255, 255);">
+
+  <div style="background-color:rgb(151, 97, 100);">
     <p style="text-align: center; font-style: italic;">
         My daily ritual of getting ready includes choosing my outfit, doing my hair, picking a perfume, and mentally preparing. Each step brings order and creativity, making me feel put-together and confident for the day ahead.</p></div>
-
 
 </body>
 </html>
