Entry 2 Link Update
Entry 2 Update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p> Recording Starting Now...</p>
     <hr>
     <a href="entries/entry1/entry1.html">ENTRY 1</a>
-    <a href="file:///Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry2/entry2.html">ENTRY 2</a>
+    <a href="entries/entry2/entry2.html">ENTRY 2</a>
     <a href="entries/entry3/entry3.html">ENTRY 3</a>
     <a href="">ENTRY 3</a>
     <a href="">ENTRY 4</a>
