--- a/entries/entry1/entry1.html
+++ b/entries/entry1/entry1.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" type="image/png" href="assets/Untitled-2.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
@@ -15,15 +16,20 @@
 </head>
 
 <body>
-  <div style="background-color:rgb(247, 242, 235);">
-    <div class="zoom-in-out-box">SOCIAL HOUR</div>
+<ul>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/index.html">HOME</a></li>
+    <li><a class="active" href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry1/entry1.html">ENTRY 1</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry2/entry2.html">ENTRY 2</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry3/entry3.html">ENTRY 3</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry4/entry4.html">ENTRY 4</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry5/entry5.html">ENTRY 5</a></li>
+    </ul>
+
+
+    <div style="background-color:rgb(247, 242, 235);">
+      <div class="zoom-in-out-box">SOCIAL HOUR</div>
        
     <br>
- 
-    <div style="background-color: rgb(255, 205, 118);">
-      <h2 style="text-align: center;">
-      <a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/index.html"> <img class="c" src="assets/IMG_566 copy 3.png" width="40" height="50"></a> ENTRY 1 <a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry2/entry2.html"><img class="c" src="assets/IMG_565 copy 3.png" width="40" height="40"></a></h2></div>
-     <br>
      
   <body>
     <div>
