--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -11,10 +11,21 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry5/assets/entry5.css">
+  <link rel="icon" type="image/png" href="assets/Untitled-2.png">
   <title>ENTRY 5</title>
 </head>
 
 <body>
+<ul>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/index.html">HOME</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry1/entry1.html">ENTRY 1</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry2/entry2.html">ENTRY 2</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry3/entry3.html">ENTRY 3</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry4/entry4.html">ENTRY 4</a></li>
+    <li><a class="active" href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry5/entry5.html">ENTRY 5</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry6/entry6.html">ENTRY 6</a></li>
+    </ul>
+
     <div class="video-container">
         <video src="assets/Liquid Video.mp4" autoplay muted playsinline loop></video>
         <div class="video-overlay">
@@ -43,11 +54,7 @@
         <img src="assets/IMG_5412.JPG" class="gallery" alt="With Order" />
         <img src="assets/IMG_5410.JPG" class="gallery" alt="With Order 2" />
     </div>
-    <div class="text-section3">
-        <a class="social" href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry4/entry4.html">PREVIOUS ENTRY</a>
-        <br>
-        <a class="social" href="entries/entry6/entry6.html">NEXT ENTRY</a>
-    </div>
+
 </body>
 </html>
     
