--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/png" href="assets/Untitled-2.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
@@ -19,7 +20,17 @@
   <link rel="stylesheet" type="text/css" href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/assets/index.css">
     <title> Autumn's Daily Rituals </title>
 </head>
+
 <body>
+<ul>
+        <li><a class="active" href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/index.html">HOME</a></li>
+        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry1/entry1.html">ENTRY 1</a></li>
+        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry2/entry2.html">ENTRY 2</a></li>
+        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry3/entry3.html">ENTRY 3</a></li>
+        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry4/entry4.html">ENTRY 4</a></li>
+        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry5/entry5.html">ENTRY 5</a></li>
+        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry6/entry6.html">ENTRY 6</a></li>
+        </ul>
     
     <h1 class="hover1">
         AUTUMN'S 
@@ -94,6 +105,10 @@
         <a class="social" href="entries/entry5/entry5.html">ENTRY 5</a>
         <br>
     </p>
+    <p class="social">
+      <a class="social" href="entries/entry6/entry6.html">ENTRY 6</a>
+      <br>
+  </p>
     <p></p>
 </div>
 <button onclick="topFunction()" id="myBtn" title="Go to top">TOP</button>
