--- a/entries/entry2/entry2.html
+++ b/entries/entry2/entry2.html
@@ -24,6 +24,7 @@
     <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry4/entry4.html">ENTRY 4</a></li>
     <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry5/entry5.html">ENTRY 5</a></li>
     <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry6/entry6.html">ENTRY 6</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry7/entry7.html">ENTRY 7</a></li>
     </ul>
 
   <div style="background-color:rgb(247, 242, 235)">
