--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry4/entry4.html">ENTRY 4</a></li>
         <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry5/entry5.html">ENTRY 5</a></li>
         <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry6/entry6.html">ENTRY 6</a></li>
+        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry7/entry7.html">ENTRY 7</a></li>
         </ul>
     
     <h1 class="hover1">
@@ -109,6 +110,10 @@
       <a class="social" href="entries/entry6/entry6.html">ENTRY 6</a>
       <br>
   </p>
+  <p class="social">
+    <a class="social" href="entries/entry7/entry7.html">ENTRY 7</a>
+    <br>
+</p>
     <p></p>
 </div>
 <button onclick="topFunction()" id="myBtn" title="Go to top">TOP</button>
