--- a/entries/entry3/entry3.html
+++ b/entries/entry3/entry3.html
@@ -23,6 +23,8 @@
     <li><a class="active" href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry3/entry3.html">ENTRY 3</a></li>
     <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry4/entry4.html">ENTRY 4</a></li>
     <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry5/entry5.html">ENTRY 5</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry6/entry6.html">ENTRY 6</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry7/entry7.html">ENTRY 7</a></li>
     </ul>
 
 <body>
