--- a/entries/entry7/entry7.html
+++ b/entries/entry7/entry7.html
@@ -25,6 +25,7 @@
     <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry5/entry5.html">ENTRY 5</a></li>
     <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry6/entry6.html">ENTRY 6</a></li>
     <li><a class="active" href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry7/entry7.html">ENTRY 7</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry8/entry8.html">ENTRY 8</a></li>
     </ul>
 
     <div class="video-container">
