--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry5/entry5.html">ENTRY 5</a></li>
         <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry6/entry6.html">ENTRY 6</a></li>
         <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry7/entry7.html">ENTRY 7</a></li>
+        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry8/entry8.html">ENTRY 8</a></li>
         </ul>
     
     <h1 class="hover1">
@@ -113,6 +114,10 @@
   <p class="social">
     <a class="social" href="entries/entry7/entry7.html">ENTRY 7</a>
     <br>
+</p>
+<p class="social">
+  <a class="social" href="entries/entry8/entry8.html">ENTRY 8</a>
+  <br>
 </p>
     <p></p>
 </div>
