--- a/entries/entry2/entry2.html
+++ b/entries/entry2/entry2.html
@@ -26,6 +26,7 @@
     <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry6/entry6.html">ENTRY 6</a></li>
     <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry7/entry7.html">ENTRY 7</a></li>
     <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry8/entry8.html">ENTRY 8</a></li>
+    <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry9/entry9.html">ENTRY 9</a></li>
     </ul>
 
   <div style="background-color:rgb(247, 242, 235)">
