--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry6/entry6.html">ENTRY 6</a></li>
         <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry7/entry7.html">ENTRY 7</a></li>
         <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry8/entry8.html">ENTRY 8</a></li>
+        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry9/entry9.html">ENTRY 9</a></li>
         </ul>
     
     <h1 class="hover1">
@@ -117,6 +118,10 @@
 </p>
 <p class="social">
   <a class="social" href="entries/entry8/entry8.html">ENTRY 8</a>
+  <br>
+</p>
+<p class="social">
+  <a class="social" href="entries/entry9/entry9.html">ENTRY 9</a>
   <br>
 </p>
     <p></p>
