--- a/entries/entry8/entry8.html
+++ b/entries/entry8/entry8.html
@@ -154,7 +154,7 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+
 <div class="page">
   <header class="header">
     <div class="game-title">
@@ -175,7 +175,7 @@
           <h2 class="menu__section__heading">WHAT IS THIS?</h2>
           <p class="menu__section__text">A fun, goofy game to help you get started working out or spice up your workout routine.</p>
           <h2 class="menu__section__heading">HOW DOES IT WORK?</h2>
-          <p class="menu__section__text">Click the red button to spin the wheel. Whatever exercise you get, click the <em>Start timer </em>button to run the 45-second timer. When the time is up, click the <em>Spin again </em>to get back to the spin wheel. Do as many times as you like. This means if you get burpee seven times in a row, do it anyway.</p>
+          <p class="menu__section__text">Click the button to spin the wheel. Whatever exercise you get, click the <em>Start timer </em>button to run the 45-second timer. When the time is up, click the <em>Spin again </em>to get back to the spin wheel. Do as many times as you like. This means if you get burpee seven times in a row, do it anyway.</p>
           <h2 class="menu__section__heading">WHY DID I MAKE IT?</h2>
           <p class="menu__section__text">Getting started is always the hardest part of cultivating a new habit. We could all use a little help with gamification.</p>
           <h2 class="menu__section__heading">WHAT IS IT NOT?</h2>
