--- a/entries/entry9/entry9.html
+++ b/entries/entry9/entry9.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200;300;400;500;600;700;800;900&family=Work+Sans:ital,wght@1,200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry9/assets/entry9.css">
+    <link rel="stylesheet" type="text/css" href="assets/entry9.css">
     <link rel="icon" type="image/png" href="assets/Untitled-2.png">
     <title>ENTRY 9</title>
   </head>
 </head>
+
 <body>
     <ul>
-        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/index.html">HOME</a></li>
-        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry1/entry1.html">ENTRY 1</a></li>
-        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry2/entry2.html">ENTRY 2</a></li>
-        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry3/entry3.html">ENTRY 3</a></li>
-        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry4/entry4.html">ENTRY 4</a></li>
-        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry5/entry5.html">ENTRY 5</a></li>
-        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry6/entry6.html">ENTRY 6</a></li>
-        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry7/entry7.html">ENTRY 7</a></li>
-        <li><a href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry8/entry8.html">ENTRY 8</a></li>
-        <li><a class="active" href="/Users/autumnpitkin/Desktop/pitkin_c1ix_f24.html/entries/entry9/entry9.html">ENTRY 9</a></li>
-        </ul>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="entries/entry1/entry1.html">ENTRY 1</a></li>
+      <li><a href="entries/entry2/entry2.html">ENTRY 2</a></li>
+      <li><a href="entries/entry3/entry3.html">ENTRY 3</a></li>
+      <li><a href="entries/entry4/entry4.html">ENTRY 4</a></li>
+      <li><a href="entries/entry5/entry5.html">ENTRY 5</a></li>
+      <li><a href="entries/entry6/entry6.html">ENTRY 6</a></li>
+      <li><a href="entries/entry7/entry7.html">ENTRY 7</a></li>
+      <li><a href="entries/entry8/entry8.html">ENTRY 8</a></li>
+      <li><a class="active" href="entries/entry9/entry9.html">ENTRY 9</a></li>
+    </ul>
     
     
         <div class="header-bottom">
