--- a/entries/entry3/entry3.html
+++ b/entries/entry3/entry3.html
@@ -17,7 +17,7 @@
 
 <body>
   <ul>
-    <li><a href="index.html">HOME</a></li>
+    <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/index.html">HOME</a></li>
     <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry1/entry1.html">ENTRY 1</a></li>
     <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry2/entry2.html">ENTRY 2</a></li>
     <li><a class="active" href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry3/entry3.html">ENTRY 3</a></li>
