--- a/entries/practice/bottomfixednav.html
+++ b/entries/practice/bottomfixednav.html
@@ -5,7 +5,7 @@
   <title>Fixed Nav</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="bottomfixednav.css">
+  <link rel="stylesheet" href="assets/bottomfixednav.css">
 
   <!-- Font: IBM Plex Mono -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
