--- a/entries/entry7/entry7.html
+++ b/entries/entry7/entry7.html
@@ -16,18 +16,18 @@
 </head>
 
 <body>
-  <ul>
-    <li><a href="index.html">HOME</a></li>
-    <li><a href="entries/entry1/entry1.html">ENTRY 1</a></li>
-    <li><a href="entries/entry2/entry2.html">ENTRY 2</a></li>
-    <li><a href="entries/entry3/entry3.html">ENTRY 3</a></li>
-    <li><a href="entries/entry4/entry4.html">ENTRY 4</a></li>
-    <li><a href="entries/entry5/entry5.html">ENTRY 5</a></li>
-    <li><a href="entries/entry6/entry6.html">ENTRY 6</a></li>
-    <li><a class="active" href="entries/entry7/entry7.html">ENTRY 7</a></li>
-    <li><a href="entries/entry8/entry8.html">ENTRY 8</a></li>
-    <li><a href="entries/entry9/entry9.html">ENTRY 9</a></li>
-  </ul>
+<ul>
+  <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/index.html">HOME</a></li>
+  <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry1/entry1.html">ENTRY 1</a></li>
+  <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry2/entry2.html">ENTRY 2</a></li>
+  <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry3/entry3.html">ENTRY 3</a></li>
+  <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry4/entry4.html">ENTRY 4</a></li>
+  <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry5/entry5.html">ENTRY 5</a></li>
+  <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry6/entry6.html">ENTRY 6</a></li>
+  <li><a class="active" href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry7/entry7.html">ENTRY 7</a></li>
+  <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry8/entry8.html">ENTRY 8</a></li>
+  <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry9/entry9.html">ENTRY 9</a></li>
+</ul>
 
     <div class="video-container">
         <video src="assets/AudioVideoEntry7.mp4" autoplay muted playsinline loop></video>
