--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         <a class="care" href="entries/entry4/entry4.html">ENTRY 4</a>
         <br>
     </p>
-    <p class="social">
-        <a class="social" href="entries/entry5/entry5.html">ENTRY 5</a>
+    <p class="ready">
+      <a class="ready" href="entries/entry5/entry5.html">ENTRY 5</a>
         <br>
     </p>
     <p class="social">
