--- a/entries/entry5/entry5.html
+++ b/entries/entry5/entry5.html
@@ -27,6 +27,7 @@
   <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry7/entry7.html">ENTRY 7</a></li>
   <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry8/entry8.html">ENTRY 8</a></li>
   <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry9/entry9.html">ENTRY 9</a></li>
+  <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry10/entry10.html">ENTRY 10</a></li>
 </ul>
 
     <div class="video-container">
