--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry7/entry7.html">ENTRY 7</a></li>
   <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry8/entry8.html">ENTRY 8</a></li>
   <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry9/entry9.html">ENTRY 9</a></li>
+  <li><a href="https://autumnpitkin.github.io/pitkin_c1ix_f24/entries/entry10/entry10.html">ENTRY 10</a></li>
 </ul>
     
     <h1 class="hover1">
@@ -122,6 +123,10 @@
 </p>
 <p class="social">
   <a class="social" href="entries/entry9/entry9.html">ENTRY 9</a>
+  <br>
+</p>
+<p class="social">
+  <a class="social" href="entries/entry10/entry10.html">ENTRY 10</a>
   <br>
 </p>
     <p></p>
