--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -31,28 +31,26 @@
 </ul>
 
     <div class="video-container">
-        <video src="assets/AudioVideoEntry7.mp4" autoplay muted playsinline loop></video>
+        <video src="assets/CleaningVideo.mp4" autoplay muted playsinline loop></video>
         <div class="video-overlay">
-            <img src="assets/TrueCrime.png" alt="True Crime Overlay Image">
+            <img src="assets/CleaningSupplies.png" alt="True Crime Overlay Image">
                 <div class="overlay-text">
-                    LISTENING TO MY
-                    <br>
-                    FAVORITE PODCAST
+                    Organizing/Cleaning
                 </div>
-                  <div class="overlay-text2">Ritual</div>
+                  <div class="overlay-text2">My Space</div>
         </div>
     </div>
     <div class="text-section2">
-            <p>ENTRY 7</p>
+            <p>ENTRY 10</p>
     </div>
     <div class="text-section">
-        <p>My daily ritual of listening to my favorite true crime podcast is a cherished blend of suspense and comfort, adding excitement and mental engagement to my day. I have a dedicated time or setting for this activity, whether it's during a commute while relaxing at home, or accompanying daily tasks. As the podcast begins, I am drawn into each case, captivated by the host’s storytelling and the unfolding mystery. The narratives spark my curiosity, making me feel as though I am part of the investigation, eagerly anticipating each new episode or plot twist. After listening, I often find myself reflecting on the details, analyzing the facts, and contemplating the psychology behind the stories, adding a layer of intrigue to my routine. This ritual is both an escape and a stimulating break from daily life, offering familiarity with the podcast’s style and host, along with the thrill of each new case.</p>
+        <p>My ritual of organizing and cleaning my space symbolizes a desire for clarity and structure. It’s a mindful and grounding process that brings order not only to my environment but also to my thoughts and emotions. This ritual involves decluttering, rearranging items, and ensuring everything has its place. It reflects my personal aesthetic and values, as well as my need for a space that feels functional and calming.</p>
     </div>
     <br>
     <div class="image-gallery">
-        <img src="assets/IMG_5973.JPG" class="gallery" alt="Airpods Listening 1" />
-        <img src="assets/IMG_5976.JPG" class="gallery" alt="Airpods Listening 2" />
-        <img src="assets/IMG_5975.JPG" class="gallery" alt="Airpods Listening 3"/>
+        <img src="assets/Drawer.JPG" class="gallery" alt="Organzing Clothes" />
+        <img src="assets/Carpet.JPG" class="gallery" alt="Vacuuming Carpet" />
+        <img src="assets/Kitchen.JPG" class="gallery" alt="Organzing Kitchen Drawer"/>
     </div>
 
     <div style="text-align: center;"><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" 
