--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -35,8 +35,10 @@
         <div class="video-overlay">
             <img src="assets/CleaningSupplies.png" alt="True Crime Overlay Image">
                 <div class="overlay-text">
-                    Organizing/Cleaning
-                </div>
+                    ORGANIZING/
+                <br>
+                CLEANING 
+              </div>
                   <div class="overlay-text2">My Space</div>
         </div>
     </div>
@@ -47,8 +49,39 @@
         <p>My ritual of organizing and cleaning my space symbolizes a desire for clarity and structure. It’s a mindful and grounding process that brings order not only to my environment but also to my thoughts and emotions. This ritual involves decluttering, rearranging items, and ensuring everything has its place. It reflects my personal aesthetic and values, as well as my need for a space that feels functional and calming.</p>
     </div>
     <br>
+    <div class="text-section2">
+        <p>ORGANZING CLOTHES</p>
+</div>
+
+
+<div class="purple-section clear">
+    <div class="mid-content">
+        <div class="purple-bttom">
+            <div class="purple-content left">
+                <h1>ORGANZING CLOTHES</h1>
+                <div class="purple-paragraph">
+                    <h2>Here are some tips for organizing clothes using the KonMari method:</h2>
+                    <p>
+                        Declutter first: Get rid of things you don't need before you start organizing.<br>
+                        Fold neatly: Folding clothes instead of stacking them saves space and prevents wrinkles.<br>
+                        Store vertically: Stand folded clothes up instead of stacking them. <br>
+                        Arrange by length: Put longer items on the left and shorter items on the right to create an upward slope.<br>
+                        Arrange by color: Organizing clothes by color can make it easier to find things and look cool.<br>
+                        Store off-season items in a bin: Store off-season items in a bin high up in your closet or cabinets.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<br>
     <div class="image-gallery">
         <img src="assets/Drawer.JPG" class="gallery" alt="Organzing Clothes" />
+    </div>
+
+
+
         <img src="assets/Carpet.JPG" class="gallery" alt="Vacuuming Carpet" />
         <img src="assets/Kitchen.JPG" class="gallery" alt="Organzing Kitchen Drawer"/>
     </div>
