--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -43,14 +43,14 @@
         </div>
     </div>
     <div class="text-section2">
-            <p>ENTRY 10</p>
+            <h1>ENTRY 10</h1>
     </div>
     <div class="text-section">
         <p>My ritual of organizing and cleaning my space symbolizes a desire for clarity and structure. It’s a mindful and grounding process that brings order not only to my environment but also to my thoughts and emotions. This ritual involves decluttering, rearranging items, and ensuring everything has its place. It reflects my personal aesthetic and values, as well as my need for a space that feels functional and calming.</p>
     </div>
     <br>
     <div class="text-section2">
-        <p>ORGANZING CLOTHES</p>
+        <h1>ORGANZING CLOTHES</h1>
 </div>
 
 
@@ -78,20 +78,12 @@
 <br>
     <div class="image-gallery">
         <img src="assets/Drawer.JPG" class="gallery" alt="Organzing Clothes" />
-    </div>
-
-
-
         <img src="assets/Carpet.JPG" class="gallery" alt="Vacuuming Carpet" />
         <img src="assets/Kitchen.JPG" class="gallery" alt="Organzing Kitchen Drawer"/>
     </div>
 
-    <div style="text-align: center;"><iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" 
-    sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" 
-    src="https://embed.podcasts.apple.com/us/podcast/serialously-with-annie-elise/id1519456164"></iframe></div> 
-
     <div class="text-section">
-        <p>I truly admire this podcast/channel. Annie Elise is the creator behind the popular YouTube channel 10toLife and the podcast Serialously where she explores various true crime stories. She is known for her honest approach and for combining thorough research with engaging storytelling, which makes every episode both informative and captivating. Annie Elise emphasizes the importance of giving victims a voice and telling their stories to seek justice and bring about change in broken systems, unjust court decisions, and outdated laws. Although some of the stories and images she presents can be difficult to process, she believes we owe it to the victims to listen and acknowledge the atrocities they faced. It is through this discomfort and heartbreak that listeners are inspired to foster a deep desire for change, motivating us to strive for a better and safer world.</p>
+        <p>Marie Kondo, a Japanese organizing consultant and author, is globally renowned for her minimalist philosophy and her revolutionary approach to tidying, known as the KonMari Method. Her work emphasizes the profound connection between physical space and mental well-being, advocating for intentional living through the art of decluttering. Kondo’s method resonates across cultures, particularly in a world increasingly concerned with sustainability and mental health. By encouraging individuals to live with intention and appreciate the items they own, she inspires a broader dialogue about how our environments affect our inner peace.</p>
     </div>
     
 
