--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -42,7 +42,7 @@
                   <div class="overlay-text2">My Space</div>
         </div>
     </div>
-    <div class="text-section2">
+                  <div class="green-content">
             <h1>ENTRY 10</h1>
     </div>
     <div class="text-section">
