--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -31,9 +31,9 @@
 </ul>
 
     <div class="video-container">
-        <video src="assets/CleaningVideo.mp4.zip" autoplay muted playsinline loop></video>
+        <video src="assets/CleaningVideo.mp4" preload="metadata" autoplay muted playsinline loop></video>
         <div class="video-overlay">
-            <img src="assets/CleaningSupplies.png.zip" alt="True Crime Overlay Image">
+            <img src="assets/CleaningSupplies.png" preload="metadata" alt="True Crime Overlay Image">
                 <div class="overlay-text">
                     ORGANIZING/
                 <br>
