--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -81,6 +81,18 @@
         <img src="assets/Kitchen.JPG" class="gallery" alt="Organzing Kitchen Drawer"/>
     </div>
 
+    <div class="drag-container">
+      <div class="items">
+        <p draggable="true">Old T-shirt</p>
+        <p draggable="true">Favorite Book</p>
+        <p draggable="true">Unused Mug</p>
+      </div>
+      <div class="bins">
+        <div class="bin keep">Keep</div>
+        <div class="bin discard">Discard</div>
+      </div>
+    </div>
+    
     <div class="text-section">
         <p>Marie Kondo, a Japanese organizing consultant and author, is globally renowned for her minimalist philosophy and her revolutionary approach to tidying, known as the KonMari Method. Her work emphasizes the profound connection between physical space and mental well-being, advocating for intentional living through the art of decluttering. Kondo’s method resonates across cultures, particularly in a world increasingly concerned with sustainability and mental health. By encouraging individuals to live with intention and appreciate the items they own, she inspires a broader dialogue about how our environments affect our inner peace.</p>
     </div>
