--- a/entries/entry7/entry7.html
+++ b/entries/entry7/entry7.html
@@ -33,7 +33,7 @@
     <div class="video-container">
         <video src="assets/AudioVideoEntry7.mp4" autoplay muted playsinline loop></video>
         <div class="video-overlay">
-            <img src="assets/TrueCrime.png" alt="True Crime Overlay Image">
+            <img src="assets/TrueCrimeOverlayFile.png" alt="True Crime Overlay Image">
                 <div class="overlay-text">
                     LISTENING TO MY
                     <br>
