script.js Entry 10

--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -98,7 +98,7 @@
       </div>
     </div>
   
-    <script src="entries/entry10/script.js"></script>
+    <script src="script.js"></script>
     
     <div class="text-section">
         <p>Marie Kondo, a Japanese organizing consultant and author, is globally renowned for her minimalist philosophy and her revolutionary approach to tidying, known as the KonMari Method. Her work emphasizes the profound connection between physical space and mental well-being, advocating for intentional living through the art of decluttering. Kondo’s method resonates across cultures, particularly in a world increasingly concerned with sustainability and mental health. By encouraging individuals to live with intention and appreciate the items they own, she inspires a broader dialogue about how our environments affect our inner peace.</p>
