--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -81,6 +81,8 @@
         <img src="assets/Kitchen.JPG" class="gallery" alt="Organzing Kitchen Drawer"/>
     </div>
 
+
+
     <h1>Does It Spark Joy?</h1>
     <p>Drag items into the correct bin: <strong>Keep</strong> or <strong>Discard</strong>.</p>
   
@@ -97,7 +99,9 @@
         <div class="bin discard">Discard</div>
       </div>
     </div>
-  
+    
+    <button onclick="location.reload()">Reset Game</button>
+
     <script src="script.js"></script>
     
     <div class="text-section">
