--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="assets/entry10.css">
   <link rel="icon" type="image/png" href="assets/Untitled-2.png">
-  <title>ENTRY 7</title>
+  <title>ENTRY 10</title>
 </head>
 
 <body>
@@ -81,7 +81,7 @@
         <img src="assets/Kitchen.JPG" class="gallery" alt="Organzing Kitchen Drawer"/>
     </div>
 
-<h1 class="game-title">Play Marie Kondo's "Spark Joy" Drag-and-Drop Sorting Game</h1>
+    <h1 class="game-title" style="color: #e07185;">Play Marie Kondo's "Spark Joy" Drag-and-Drop Sorting Game</h1>
 
     <h1>Does It Spark Joy?</h1>
     <p>Drag items into the correct bin: <strong>Keep</strong> or <strong>Discard</strong>.</p>
