--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -77,10 +77,40 @@
 <br>
     <div class="image-gallery">
         <img src="assets/Drawer.JPG" class="gallery" alt="Organzing Clothes" />
-        <img src="assets/Carpet.JPG" class="gallery" alt="Vacuuming Carpet" />
-        <img src="assets/Kitchen.JPG" class="gallery" alt="Organzing Kitchen Drawer"/>
     </div>
 
+    <div class="text-section2">
+      <h1>MARIE KONDO’S SIMPLE TIPS FOR A CLEANER, JOYFUL SPACE</h1>
+</div>
+
+<div class="purple-section clear">
+  <div class="mid-content">
+      <div class="purple-bttom">
+          <div class="purple-content left">
+              <div class="purple-paragraph">
+                  <h2>Here are some Marie Kondo-inspired organization tips:</h2>
+                  <p>
+                    1. Tidy by Category, Not Location: <br>
+                    Gather all items from the same category (e.g., clothes, books) and organize them at once. This prevents scattering and promotes a clearer focus.<br>
+                    2. Does It Spark Joy? <br>
+                    Hold each item and ask yourself if it truly brings you joy. If it doesn’t, thank it for its service and let it go.<br>
+                    3. Respect Your Belongings <br>
+                    Treat your possessions with care. Fold clothes neatly, and store items so they’re easy to see and access. <br>
+                    4. Designate a Home for Everything <br>
+                    Every item should have a specific place to return to after use, reducing clutter buildup.<br>
+                    5. Visualize Your Ideal Lifestyle <br>
+                    Before starting, imagine how you want your space to look and feel. Let this vision guide your decluttering and organizing decisions.<br>
+                  </p>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+<div class="image-gallery">
+  <img src="assets/Carpet.JPG" class="gallery" alt="Vacuuming Carpet" />
+  <img src="assets/Kitchen.JPG" class="gallery" alt="Organzing Kitchen Drawer"/>
+</div>
     <h1 class="game-title" style="color: #e07185;">Play Marie Kondo's "Spark Joy" Drag-and-Drop Sorting Game</h1>
 
     <h1>Does It Spark Joy?</h1>
