--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -111,7 +111,7 @@
   <img src="assets/Carpet.JPG" class="gallery" alt="Vacuuming Carpet" />
   <img src="assets/Kitchen.JPG" class="gallery" alt="Organzing Kitchen Drawer"/>
 </div>
-    <h1 class="game-title" style="color: #e07185;">Play Marie Kondo's "Spark Joy" Drag-and-Drop Sorting Game</h1>
+    <h1 class="game-title" style="color: rgb(234, 192, 199);">Play Marie Kondo's "Spark Joy" Drag-and-Drop Sorting Game</h1>
 
     <h1>Does It Spark Joy?</h1>
     <p>Drag items into the correct bin: <strong>Keep</strong> or <strong>Discard</strong>.</p>
