--- a/entries/entry10/entry10.html
+++ b/entries/entry10/entry10.html
@@ -130,7 +130,7 @@
       </div>
     </div>
     
-    <button class="reset-button" onclick="location.reload()">Reset Game</button>
+    <button onclick="location.reload()" class="reset-button">Reset Game</button>
 
     <script src="script.js"></script>
     
